# GovAssist

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_my_grader.py
env/: environment.py
env/graders/: task1_aadhaar.py
govform-openenv/: .gitignore  README.md  app.py  inference.py  validate-submission.sh
govform-openenv/env/: __init__.py  models.py  reward.py
govform-openenv/env/forms/: aadhaar_update.json  income_certificate.json  passport_renewal.json
govform-openenv/env/graders/: task2_income.py  task3_passport.py
govform-openenv/tests/: test_env.py
govform_env/: __init__.py  client.py  environment.py  models.py  reward.py
govform_env/graders/: base.py  task1_aadhaar.py  task2_income.py  task3_passport.py
server/: app.py
tests/: test_env.py
